# monoliet-mcp-server

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  HTTP_API.md  HTTP_MODE_UPDATE.md  LICENSE  MANAGEMENT_API.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  VERIFICATION.md  docker-compose.yml  health_check.py  pyproject.toml  pytest.ini  requirements.txt  start.bat  start.sh  test_http_api.py  tmpclaude-fa6c-cwd
.github/workflows/: ci.yml
src/: __init__.py  config.py  management_api.py  n8n_client.py  server.py
src/tools/: __init__.py  base.py  executions.py  health.py  workflows.py
tests/: __init__.py  test_management_api.py  test_n8n_client.py  test_tools.py
